finishing up mobile styles

--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ body {
     margin: auto;
     margin-top: 2rem;
     color: $very-dark-gray;
-    padding: 2rem 0;
+    padding: 2rem 0 0 0;
     border-radius: 10px;
     position: absolute;
     left: 50%;
