map works fine, onto making it display the right location

--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,11 @@ body {
   }
 }
 .map-container {
+  position: relative;
+  z-index: 1000;
   border: 5px solid red;
-  height: 90rem;
+  // height: 90rem;
+  #map {
+    outline: 1px solid blue;
+  }
 }
