still working on map area

--- a/style.scss
+++ b/style.scss
@@ -89,6 +89,6 @@ body {
   // height: 90rem;
   #map {
     outline: 1px solid blue;
-    height: calc(100vh- 28rem);
+    // height: calc(100vh- 28rem);
   }
 }
