now working on responsiveness for larger screens and general layout

--- a/style.scss
+++ b/style.scss
@@ -92,10 +92,7 @@ body {
 .map-container {
   position: relative;
   z-index: 1;
-  // height: 90rem;
-  #map {
-    // height: calc(100vh- 28rem);
-  }
 }
 @media (min-width: 550px) {
 }
+// Modal and overlay
