--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,9 @@ $dark-gray: hsl(0, 0%, 59%);
 $very-dark-gray: hsl(0, 0%, 17%);
 
 //Mobile-first styles
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -60,7 +62,6 @@ body {
   }
   .ip-info-container {
     background-color: #fff;
-
     width: 80%;
     margin: auto;
     margin-top: 2rem;
@@ -92,6 +93,37 @@ body {
 .map-container {
   position: relative;
   z-index: 1;
+}
+@media (min-width: 1440px) {
+  .heading-text {
+    font-size: 4rem;
+    outline: 1px solid red;
+  }
+  .ip-info-container {
+    display: flex;
+    padding: 2rem;
+    box-shadow: 0px 15px 100px 0px rgba($color: #000000, $alpha: 0.2);
+    div {
+      flex: 1;
+      border-right: 1px solid rgb(184, 184, 184);
+      margin: 0;
+      text-align: left;
+      padding: 2rem;
+      padding-left: 3rem;
+      p:first-of-type {
+        outline: 1px solid red;
+        margin: 0;
+        font-size: 1.5rem;
+      }
+      p:last-of-type {
+        outline: 1px solid red;
+        font-size: 4rem;
+      }
+    }
+    div:last-of-type {
+      border: none;
+    }
+  }
 }
 @media (min-width: 550px) {
 }
