--- a/style.scss
+++ b/style.scss
@@ -94,37 +94,76 @@ body {
   position: relative;
   z-index: 1;
 }
-@media (min-width: 1440px) {
-  .heading-text {
-    font-size: 4rem;
-    outline: 1px solid red;
-  }
-  .ip-info-container {
-    display: flex;
-    padding: 2rem;
-    box-shadow: 0px 15px 100px 0px rgba($color: #000000, $alpha: 0.2);
-    div {
-      flex: 1;
-      border-right: 1px solid rgb(184, 184, 184);
-      margin: 0;
-      text-align: left;
-      padding: 2rem;
-      padding-left: 3rem;
-      p:first-of-type {
-        outline: 1px solid red;
-        margin: 0;
-        font-size: 1.5rem;
-      }
-      p:last-of-type {
-        outline: 1px solid red;
-        font-size: 4rem;
-      }
+
+@media (min-width: 450px) and (max-width: 1199px) {
+  .main-container {
+    form {
+      max-width: 500px;
     }
-    div:last-of-type {
-      border: none;
+    .ip-info-container {
+      max-width: 800px;
     }
   }
 }
-@media (min-width: 550px) {
+@media (max-width: 450px) {
+  .main-container {
+    .ip-info-container {
+      width: 70%;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .main-container {
+    height: 22rem;
+    .heading-text {
+      font-size: 4rem;
+      // outline: 1px solid red;
+    }
+    form {
+      // outline: 1px solid red;
+      width: 40%;
+      input {
+        // outline: 1px solid red;
+        font-size: 1.5rem;
+      }
+      button {
+      }
+      button:hover {
+      }
+    }
+
+    .ip-info-container {
+      display: flex;
+      padding: 0rem;
+      top: 20rem;
+      // outline: 1px solid red;
+      box-shadow: 0px 15px 100px 0px rgba($color: #000000, $alpha: 0.2);
+      div {
+        flex: 1;
+        // outline: 1px solid red;
+        border-right: 1px solid rgb(184, 184, 184);
+        margin: 0;
+        text-align: left;
+        padding: 3rem 0 3rem 0;
+        padding-left: 3rem;
+        p:first-of-type {
+          // outline: 1px solid red;
+          margin: 0 0 1rem 0;
+
+          font-size: 1rem;
+        }
+        p:last-of-type {
+          // outline: 1px solid red;
+          font-size: 1.5rem;
+          width: 80%;
+          // outline: 1px solid red;
+        }
+      }
+      div:last-of-type {
+        border: none;
+      }
+    }
+  }
 }
 // Modal and overlay
