--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ $very-dark-gray: hsl(0, 0%, 17%);
 body {
   font-family: $rubik;
   text-align: center;
+  position: relative;
 }
 .main-container {
   background-image: url("/images/pattern-bg.png");
@@ -27,6 +28,7 @@ body {
   background-size: cover;
   height: 22rem;
   padding-top: 2rem;
+  // position: relative;
   .heading-text {
     margin-bottom: 2rem;
     color: #fff;
@@ -72,9 +74,9 @@ body {
     word-wrap: break-word;
     left: 50%;
     // top: 60%;
-    top: 28rem; //needs to be fixed
+    top: 26rem; //needs to be fixed
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 2;
     div {
       margin-bottom: 2rem;
       p:first-of-type {
@@ -95,6 +97,7 @@ body {
   z-index: 1;
 }
 
+// Error modal and popup
 @media (min-width: 450px) and (max-width: 1199px) {
   .main-container {
     form {
@@ -139,15 +142,17 @@ body {
 
     .ip-info-container {
       display: flex;
-      padding: 0rem;
+      padding: 2rem;
+      // outline: 1px solid red;
       top: 20rem;
       box-shadow: 0px 15px 100px 0px rgba($color: #000000, $alpha: 0.2);
       div {
         flex: 1;
+        // outline: 1px solid red;
         border-right: 1px solid rgb(184, 184, 184);
         margin: 0;
         text-align: left;
-        padding: 3rem 0 3rem 0;
+        padding: 1rem 0 1rem 0;
         padding-left: 3rem;
         p:first-of-type {
           margin: 0 0 1rem 0;
@@ -165,4 +170,45 @@ body {
     }
   }
 }
-// Modal and overlay
+/// overlay and modal
+.modal {
+  z-index: 10;
+  border: none;
+  font-weight: 500;
+  text-align: center;
+  width: 30rem;
+  padding: 2rem 0;
+  background-color: #fff;
+  text-align: left;
+  padding: 0;
+  font-family: $rubik;
+  padding: 2rem;
+  p {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  p:first-of-type {
+    font-weight: 700;
+  }
+  .close-modal {
+    font-family: inherit;
+    background-color: inherit;
+  }
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 5;
+  display: grid;
+  place-items: center;
+  // border: 5px solid red;
+}
+
+// .hidden {
+//   display: none;
+// }
