--- a/style.scss
+++ b/style.scss
@@ -176,7 +176,8 @@ body {
   border: none;
   font-weight: 500;
   text-align: center;
-  width: 30rem;
+  width: 80%;
+  max-width: 30rem;
   padding: 2rem 0;
   background-color: #fff;
   text-align: left;
@@ -193,6 +194,8 @@ body {
   .close-modal {
     font-family: inherit;
     background-color: inherit;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
   }
 }
 
@@ -209,6 +212,6 @@ body {
   // border: 5px solid red;
 }
 
-// .hidden {
-//   display: none;
-// }
+.hidden {
+  display: none;
+}
